--- a/proResponse/package.json
+++ b/proResponse/package.json
@@ -18,6 +18,7 @@
     "react-datepicker": "^9.1.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^6.30.3",
+    "react-use-websocket": "^4.13.0",
     "styled-components": "^6.3.6"
   },
   "devDependencies": {
