--- a/proResponse/package.json
+++ b/proResponse/package.json
@@ -13,6 +13,7 @@
     "@portone/browser-sdk": "^0.1.2",
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
+    "bootstrap-icons": "^1.13.1",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
     "react-datepicker": "^9.1.0",
