--- a/proResponse/package.json
+++ b/proResponse/package.json
@@ -22,7 +22,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.3",
     "react-use-websocket": "^4.13.0",
-    "styled-components": "^6.3.6"
+    "styled-components": "^6.3.6",
+    "swiper": "^12.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
